dist/k8s/ingress-relay.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-relay
  namespace: liamsarsfielddev
spec:
  selector:
    app: liamsarsfielddev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
